--- a/home/index.html
+++ b/home/index.html
@@ -56,7 +56,7 @@
   </style>
 </head>
 
-<body data-spy="scroll" data-target="#navbar" data-offset="50">
+<body data-spy="scroll" data-target="#navbar" >
   <!-- 顶部 -->
   <div class="topper ">
     <div class="inner">
@@ -169,7 +169,7 @@
   <script type="text/javascript">
     $(function(){
       var $body = $('body');
-      $body.scrollspy({ target: '#navbar', offset: 200});
+      $body.scrollspy({ target: '#navbar'});
       $body.on('activate.bs.scrollspy', function (ev) {
         $('#navbar .nav').addClass("affix");
         //console.log(ev.currentTarget.scrollTop)
