--- a/home/index.html
+++ b/home/index.html
@@ -108,13 +108,13 @@
           </div>
           <div class="col-xs-6 col-sm-6 col-md-4 ">
             <a href="works/京东/index.html" class="thumbnail" target="_black">
-              <img src="./images/jd_home_02.jpg" alt="works">
+              <img src="./images/jd_home.jpg" alt="works">
               <span>京东主页</span>
             </a>
           </div>
           <div class="col-xs-6 col-sm-6 col-md-4 ">
             <a href="works/京东/product_details.html" class="thumbnail" target="_black">
-              <img src="./images/jd_details_01.jpg" alt="works">
+              <img src="./images/jd_details.jpg" alt="works">
               <span>京东商品购买页面</span>
             </a>
           </div>
@@ -126,13 +126,13 @@
           </div>
           <div class="col-xs-6 col-sm-6 col-md-4">
             <a href="works/照片墙/index.html" class="thumbnail" target="_black">
-              <img src="./images/Photo_wall_02.jpg" alt="works">
+              <img src="./images/Photo_wall.jpg" alt="works">
               <span>照片墙</span>
             </a>
           </div>
           <div class="col-xs-6 col-sm-6 col-md-4">
             <a href="works/3D车轮旋转效果切换图片/3D相册（比较难）.html" class="thumbnail" target="_black">
-              <img src="./images/wheel_photo_02.jpg" alt="works">
+              <img src="./images/wheel_photo.jpg" alt="works">
               <span>3D车轮切换图片</span>
             </a>
           </div>
@@ -141,7 +141,7 @@
           <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-4">
               <a href="https://chenyk2016.github.io/vue-local/dist/" class="thumbnail" target="_black">
-                <img src="./images/douban_03.jpg" alt="works">
+                <img src="./images/douban.jpg" alt="works">
                 <span>Vue仿豆瓣app</span>
               </a>
             </div>
